2005-05-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add build-aux/mkinstalldirs.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.14.5.

2005-04-23  Karl Berry  <karl@gnu.org>

	* po/Makevars (MSGID_BUGS_ADDRESS): change to bug-hello@gnu.org.

	* src/hello.c (locale.h): unconditionally include, everything has
	this now.
	* m4/Makefile.am: remove, no longer needed.
	* intl/*: remove, we'll use [external] gettext.
	* configure.ac (AC_FUNC_ALLOCA): add.
	(AC_CONFIG_FILES): no m4 or intl.
	* Makefile.am (SUBDIRS): no m4 or intl.

2005-03-27  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add intl/Makefile.

2005-03-21  Karl Berry  <karl@gnu.org>

	* doc/hello.texi: switch to GFDL; make Texinfo source follow
	current practices.

2005-03-20  Karl Berry  <karl@gnu.org>

	* README, README-alpha, NEWS, THANKS, AUTHORS: text updates.
	* README.dev: new file.

2004-05-16  Karl Eichwalder  <ke@gnu.franken.de>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Add.

2002-07-20  Karl Eichwalder  <keichwa@gmx.net>

	* Makefile.am (DISTCLEANFILES): New variable, add stamp-h created
	by configure.

	* Upgrade to gettext-0.11.3.
	* Upgrade to autoconf-2.53b.
	* Upgrade to automake-1.6.2.

	* configure.ac: 2.1.2, ke_PRE: 2.1.1.

2002-06-09  Karl Eichwalder  <keichwa@gmx.net>

	* Release 2.1.1.

2002-06-08  Karl Eichwalder  <keichwa@gmx.net>

	* configure.ac (AC_INIT): Replace use of the zero-arg form of
	AC_INIT with a use of the 3-arg form.
	* configure.ac (AM_INIT_AUTOMAKE): Use zero-arg form of this
	macro.

	* configure.ac: 2.1.1, ke_PRE: 2.1.0.

2002-05-22  Karl Eichwalder  <keichwa@gmx.net>

	* Release 2.1.0.

2002-05-25  Karl Eichwalder  <ke@gnu.franken.de>

	* configure.ac: Set official bug report address.
	* configure.ac: 2.1.0, ke_PRE: 2.0.60.
	* README-alpha: Remove on account of the official release.

2002-05-22  Karl Eichwalder  <keichwa@gmx.net>

	* Run 'gettextize --intl -f -c' (GNU gettext 0.11.2) to update