@@ -1,3 +1,7 @@
+2005-08-19  Karl Berry  <karl@gnu.org>
+
+	* src/hello.c (main): version message formatting.
+
 2005-05-28  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.am (EXTRA_DIST): Add build-aux/mkinstalldirs.
